css/activity-map.css
#content-area {
  display: block;
  float: left;
  /*margin-right: 2.35765%;
  width: 74.41059%;*/
  padding: 0;
  background: none;
}

.states {/*A9BDAD*/
  fill: #66c2a4;
}

.states :hover {
  /*fill: #336699;90A494*/
  fill: #002868;
}

.state-borders {
  fill: none;
  stroke: #fff;
  stroke-width: 1px;
  stroke-linejoin: round;
  stroke-linecap: round;
  pointer-events: none;
}

.label {
    color: #002868;
    font-family: "Arial Narrow", Arial, sans-serif;
   /* font-size: 20px;*/
}

.state {
    /*font-size: 28px;*/
    display: inline;
	font-weight: bold;
}

.data-value {
  margin-top: 10px;
}

#container {
  width: 100%;
  margin-top: -70px;
  padding: 0px;
  position: relative;
}

#map {
  width: 100%;
  height: 600px;
  margin-bottom: -70px;
  float: left;
}

#data-panel {
 /* margin-left: 50%;
align: center;
  z-index: -1;*/
}

/* barchart css*/
#mapid {
   margin-bottom: 20px;
}

.bar {
  fill: #4b79b4; /* lightsteelblue family */
}

.axis path,
.axis line {
   stroke: #000;
}

.axis-y text {
   font-size: 14px;
}

.btn .btn-primary {
   margin-right: 20px;
}

.button-holder{
    text-align: center;
}

.button-holder a {
  text-decoration: none;
}

